--- a/package.json
+++ b/package.json
@@ -10,10 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@turf/turf": "^7.2.0",
     "mapshaper": "^0.6.102",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "three": "^0.168.0"
+    "three": "^0.168.0",
+    "world-atlas": "^2.0.2",
+    "@react-three/fiber": "^8.0.27",
+    "@react-three/drei": "^9.6.0",
+    "d3-geo": "^3.0.1",
+    "topojson-client": "^3.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
